# bds-adapter

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini
src/bds_adapter/: __init__.py  adapter.py  cli.py  s3.py
tests/: __init__.py  test_adapter.py  test_s3.py
