[project]
name = "bds-adapter"
version = "0.1.0"
description = "BDS call recording to vCon adapter for compliance analysis"
authors = [
    {name = "benjigifford", email = "benjamingifford8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "bds-adapter"
version = "0.1.0"
description = "BDS call recording to vCon adapter"
authors = ["Benjamin Gifford <benjamingifford8@gmail.com>"]
packages = [
    { include = "bds_adapter", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
click = "^8.0.0"
vcon = "0.7.0"
pypdf = "^3.0.0"
Pillow = "^10.0.0"
pytest = ">=8.3.2,<9.0.0"  # Match vcon's requirement
boto3 = "^1.34.0"
uuid = "^1.30"

[tool.poetry.scripts]
bds-adapter = "bds_adapter.cli:main"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"